--- a/admin_postman/Dockerfile
+++ b/admin_postman/Dockerfile
@@ -10,6 +10,6 @@ COPY . /app
 
 WORKDIR /app
 
-RUN python3.10 manage.py makemigrations && python3.10 manage.py migrate
+RUN python3.10 manage.py migrate
 
 CMD ["gunicorn", "admin_postman.wsgi:application", "--bind", "0:8010" ] 
